--- a/systemlabs.ipynb
+++ b/systemlabs.ipynb
@@ -3,10 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "1RwVjQWiOCUzxSYnF8_1CAzlFN0JjRFWB",
-      "authorship_tag": "ABX9TyP0tGIZWwxjB6+HjKe7eFFI",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -6519,16 +6516,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/harshatamada/SystemLabs/blob/main/systemlabs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
